fix ManyToMany